--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
-        <title>Live Frame | Codeframe</title>
+        <title>Pomodoro Timer</timer>
     </head>
     <body>
         <style>
